2011-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDT.cpp: Added two new functions for date of first and last
	weekday in a given month and year (eg first Friday in Jan 2011)

	* R/bdt.R:
	  - added function to export core object for access
	  - changed functions to access core object via per-pack. environment
	  - added functions for first/last day-of-week in month/year

	* demo/RcppBDT.R: updated to keep in sync with other changes
	
2011-01-06  Dirk Eddelbuettel  <edd@dexter>

	* inst/include/RcppBDT.h: Added paragraph about the UseWithString
	variable with governs whether input/output functionality is loaded
	which then requires linking with the Boost Date_Time library. Default
	is just templates and no input/output given just basic date conversion
	but no parsing from or formatting to string.

	* DESCRIPTION: Expanded Description, mentioned optional linking of
	Boost library to get string to/from date conversion functionality

2011-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDT.cpp: Expose new functions to compute IMM date (third
	Wednesday) and the more general 'nth day of mth week'

	* R/bdt.R: Expose two new functions getIMMDate() and its generalisation
	getNthDayOfMthWeek()

	* demo/RcppBDT.R: Also added to demo

2011-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* R/bdt.R: Added a few accessor functions for R

	* src/RcppBDT.cpp: Added fromDate() setter

	* R/zzz.R: Make both date module and a class global
	* demo/RcppBDT.R: Adapted demo accordingly

2011-01-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.win: Added -I$(BOOSTLIB)

2011-01-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDT.cpp: Modified modules wrapper name to make it clearer
	which function set and which functions get or convert data

	* tests/RcppBDT.R: Define simplest test of just calling demo()

	* inst/include/RcppBDT.h: Defined compile-time variable to allow use
	of string functions; when not defined we use only pure C++ template